--- a/ss7_bien_va_kieu_du_lieu/Biến, kiểu dữ liệu/assignment_bai_2.html
+++ b/ss7_bien_va_kieu_du_lieu/Biến, kiểu dữ liệu/assignment_bai_2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Đổi nhiệt độ</title>
 </head>
 <body>
 <h1>CHUYỂN ĐỔI NHIỆT ĐỘ (TỪ Celsius sang Fahrenheit)</h1>
