--- a/ss7_bien_va_kieu_du_lieu/Biến, kiểu dữ liệu/assignment_bai_1.html
+++ b/ss7_bien_va_kieu_du_lieu/Biến, kiểu dữ liệu/assignment_bai_1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tính điểm trung bình</title>
 </head>
 <body>
 <h1>TÍNH ĐIỂM TRUNG BÌNH CÁC MÔN HỌC </h1>
