--- a/ss7_bien_va_kieu_du_lieu/Biến, kiểu dữ liệu/assignment_bai_3.html
+++ b/ss7_bien_va_kieu_du_lieu/Biến, kiểu dữ liệu/assignment_bai_3.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tính diện tích </title>
 </head>
 <body>
-<h1>TÍNH CHU VI HÌNH TRÒN</h1>
-<label for="radius">Nhập bán kính </label>
+<h1>CHƯƠNG TRÌNH TÍNH DIỆN TÍCH HÌNH TRÒN</h1>
+<label for="radius">Nhập bán kính</label>
 <input type="number" value="0" id="radius" placeholder="nhập tại đây">
 <br><br>
-<button onclick="chuyenDoi()">Tính chu vi</button>
+<button onclick="chuyenDoi()">Tính diện tích</button>
 <script>
 
     function chuyenDoi() {
@@ -19,8 +19,9 @@
             document.getElementById("ketQua").innerText = "Lỗi cú pháp, vui lòng thử lại";
             return
         }
-        let chuVi = 2 * Math.PI * banKinh;
-        document.getElementById("ketQua").innerText = chuVi.toFixed(2);
+        // const PI = Math.PI;
+        let dienTich = Math.PI * banKinh * banKinh;
+        document.getElementById("ketQua").innerText = dienTich.toFixed(2);
     }
 </script>
 <p id="ketQua"></p>
