--- a/ss10_cau_truc_vong_lap1/luyen_tap_vong_lap/bai_2.html
+++ b/ss10_cau_truc_vong_lap1/luyen_tap_vong_lap/bai_2.html
@@ -10,13 +10,13 @@
         let nhietDo = +prompt("Nhập nhiệt độ: ");
         if (isNaN(nhietDo) || nhietDo < 0) {
             alert("Lỗi, vui lòng thử lại");
-            continue;
+//            continue;
         } else if (nhietDo > 100) {
             alert("Hãy giảm nhiệt độ! ");
-            continue;
+//            continue;
         } else if (nhietDo < 20) {
             alert("Hãy tăng nhiệt độ!");
-            continue;
+//            continue;
         } else {
             break;
         }
