--- a/ss5_form_table/tao_form_dky.html
+++ b/ss5_form_table/tao_form_dky.html
@@ -7,11 +7,11 @@
 <body>
 <form action=" http://demo.codegym.vn/6/registration_form/register.php" method="post">
     <label for="name"><b>Họ và tên:</b></label><br>
-    <input style="text;margin-bottom: 20px" id="name"><br>
+    <input style="text: margin-bottom 20px" id="name"><br>
     <label for="email"><b>Email:</b></label><br>
-    <input style="text;margin-bottom: 20px" id="email"><br>
+    <input style="text:margin-bottom 20px" id="email"><br>
     <label for="phone"><b>Số điện thoại:</b> </label><br>
-    <input style="number;margin-bottom: 20px" id="phone"><br>
+    <input style="number:margin-bottom 20px" id="phone"><br>
     <label><b>Giới tính: </b></label><br>
     <input type="radio" name="gender" value="male"><span><b>Nam</b></span>
     <input type="radio" name="gender" value="male"><span><b>Nữ</b></span><br>
