--- a/ss15_ham2/bai_9.html
+++ b/ss15_ham2/bai_9.html
@@ -28,25 +28,21 @@
     while (true) {
         let kyTu = prompt("Nhập ký tự cần tìm kiếm: ");
         if (kyTu.length === 1) {
-            checkKyTu(kyTu);
+            alert(demSoLanXuatHien(arr, kyTu));
             break;
         } else {
             alert("Vui lòng nhập đúng 1 ký tự");
         }
     }
 
-    function checkKyTu(kyTu) {
-        let found = false;
-        for (let i = 0; i < n; i++) {
-            if (kyTu === arr[i]) {
-                alert("Ký tự này có trong mảng");
-                found = true;
-                break;
+    function demSoLanXuatHien(mang, kyTu) {
+        let dem = 0;
+        for (let i = 0; i < mang.length; i++) {
+            if (mang[i] === kyTu) {
+                dem++;
             }
         }
-        if (!found) {
-            alert("Ký tự này không có trong mảng");
-        }
+        return dem > 0 ? dem : -1;
     }
 </script>
 </body>
