--- a/case_study/bai_1.html
+++ b/case_study/bai_1.html
@@ -11,7 +11,7 @@
         var n = +prompt("Nhập số hạng phần tử: ");
         if (isNaN(n) || n % 1 !== 0 || n <= 0) {
             alert("Lỗi cú pháp, vui lòng thử lại");
-        } else if (n > 20 || n < 3) {
+        } else if (n > 20) {
             alert("Lỗi yêu cầu đề, vui lòng thử lại");
         } else {
             break;
@@ -31,8 +31,13 @@
     console.log(arr);
     let check = true;
     let temp = arr[1] - arr[0];
+    if (temp <= 0) {
+        check = false;
+    }
     for (let i = 1; i < arr.length; i++) {
-        if (arr[i + 1] - arr[i] != temp) {
+        if (arr.length < 3) {
+            check = false;
+        } else if (arr[i + 1] - arr[i] != temp) {
             check = false;
         }
     }
