--- a/case_study/bai_1.html
+++ b/case_study/bai_1.html
@@ -8,7 +8,7 @@
 <script>
 
     while (true) {
-        var n = +prompt("Nhập số hạng phần tử: ");
+        var n = prompt("Nhập số hạng phần tử: ");
         if (isNaN(n) || n % 1 !== 0 || n <= 0) {
             alert("Lỗi cú pháp, vui lòng thử lại");
         } else if (n > 20) {
@@ -34,18 +34,20 @@
     if (temp <= 0) {
         check = false;
     }
-    for (let i = 1; i < arr.length; i++) {
+    for (let i = 1; i < arr.length - 1; i++) {
         if (arr.length < 3) {
             check = false;
+            break;
         } else if (arr[i + 1] - arr[i] != temp) {
             check = false;
+            break;
         }
     }
 
     if (check) {
-        alert("TRUE");
+        alert("OK");
     } else {
-        alert("FALSE");
+        alert("NO");
     }
 
 </script>
