--- a/case_study/bai_3.html
+++ b/case_study/bai_3.html
@@ -5,6 +5,46 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    while (true) {
+        var n = prompt("Nhập số hạng phần tử: ");
+        if (isNaN(n) || n % 1 !== 0 || n <= 0) {
+            alert("Lỗi cú pháp, vui lòng thử lại");
+        } else {
+            break;
+        }
+    }
+    let arr = new Array(n);
+    for (let i = 0; i < arr.length; i++) {
+        while (true) {
+            arr[i] = +prompt("Nhập phần tử thứ " + (i + 1));
+            if (isNaN(arr[i])) {
+                alert("Lỗi cú pháp, vui lòng thử lại");
+            } else {
+                break;
+            }
+        }
+    }
+    console.log(arr);
 
+    if (arr < 2) {
+        alert("NO");
+    } else {
+        let check = true;
+        for (let i = 0; i < Math.floor(arr.length / 2); i++) {
+            for (let j = arr.length - 1; j > Math.floor(arr.length / 2); j--) {
+                if (arr[i] !== arr[j]) {
+                    check = flase;
+                    break;
+                }
+            }
+        }
+        if (check) {
+            alert("OK");
+        } else {
+            alert("NO");
+        }
+    }
+</script>
 </body>
 </html>
