--- a/case_study/bai_1.html
+++ b/case_study/bai_1.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Check tăng dần</title>
 </head>
 <body>
 <script>
 
     while (true) {
-        var n = prompt("Nhập số hạng phần tử: ");
+        var n = +prompt("Nhập số hạng phần tử: ");
         if (isNaN(n) || n % 1 !== 0 || n <= 0) {
             alert("Lỗi cú pháp, vui lòng thử lại");
         } else if (n > 20) {
             alert("Lỗi yêu cầu đề, vui lòng thử lại");
         } else {
-            break;
+                break;
         }
     }
     let arr = new Array(n);
+    alert(arr.length);
     for (let i = 0; i < arr.length; i++) {
         while (true) {
             arr[i] = +prompt("Nhập phần tử thứ " + (i + 1));
@@ -33,17 +34,16 @@
     let temp = arr[1] - arr[0];
     if (temp <= 0) {
         check = false;
-    }
-    for (let i = 1; i < arr.length - 1; i++) {
-        if (arr.length < 3) {
-            check = false;
-            break;
-        } else if (arr[i + 1] - arr[i] != temp) {
-            check = false;
-            break;
+    } else if (arr.length < 3) {
+        check = false;
+    } else {
+        for (let i = 1; i < arr.length - 1; i++) {
+            if (arr[i + 1] - arr[i] != temp) {
+                check = false;
+                break;
+            }
         }
     }
-
     if (check) {
         alert("OK");
     } else {
