--- a/case_study/bai_2.html
+++ b/case_study/bai_2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Check tam giác</title>
 </head>
 <body>
 <script>
