--- a/case_study/bai_3.html
+++ b/case_study/bai_3.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Check đối xứng</title>
 </head>
 <body>
 <script>
     while (true) {
-        var n = prompt("Nhập số hạng phần tử: ");
+        var n = +prompt("Nhập số hạng phần tử: ");
         if (isNaN(n) || n % 1 !== 0 || n <= 0) {
             alert("Lỗi cú pháp, vui lòng thử lại");
         } else {
@@ -26,24 +26,21 @@
         }
     }
     console.log(arr);
-
-    if (arr < 2) {
+    let check = true;
+    if (arr.length < 2) {
         alert("NO");
     } else {
-        let check = true;
         for (let i = 0; i < Math.floor(arr.length / 2); i++) {
-            for (let j = arr.length - 1; j > Math.floor(arr.length / 2); j--) {
-                if (arr[i] !== arr[j]) {
-                    check = flase;
-                    break;
-                }
+            if (arr[i] !== arr[arr.length - 1 - i]) {
+                check = flase;
+                break;
             }
         }
-        if (check) {
-            alert("OK");
-        } else {
-            alert("NO");
-        }
+    }
+    if (check) {
+        alert("OK");
+    } else {
+        alert("NO");
     }
 </script>
 </body>
