--- a/case_study/bai_7.html
+++ b/case_study/bai_7.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Check hàm số nguyên</title>
+    <title>Check hàm ký tự</title>
 </head>
 <body>
 <script>
@@ -19,9 +19,11 @@
     let arr = new Array(n);
     for (let i = 0; i < arr.length; i++) {
         while (true) {
-            arr[i] = +prompt("Nhập phần tử thứ " + (i + 1));
-            if (isNaN(arr[i]) || arr[i] % 1 !== 0) {
-                alert("Lỗi cú pháp, vui lòng thử lại");
+            arr[i] = prompt("Nhập phần tử thứ " + (i + 1));
+            if (arr[i].length != 1) {
+                alert("Lỗi cú pháp do nhập nhiều ký tự, vui lòng thử lại");
+            } else if (!((arr[i] >= '0' && arr[i] <= '9') || (arr[i] >= 'A' && arr[i] <= 'Z') || (arr[i] >= 'a' && arr[i] <= 'z'))) {
+                alert("Ký tự không hợp lệ, vui lòng nhập chữ cái hoặc số");
             } else {
                 break;
             }
@@ -30,19 +32,21 @@
     alert("Kết quả: " + checkHam(arr));
 
     function checkHam(array) {
-        let checkLe = false;
-        let checkChan = false;
+        let checkKyTu = false;
+        let checkSo = false;
+
         for (let i = 0; i < array.length; i++) {
-            if (array[i] % 2 === 0) {
-                checkChan = true;
-            } else {
-                checkLe = true;
+            if (array[i] >= '0' && ar[i] <= '9') {
+                isAlphaOnly = false;
+            } else if ((char >= 'a' && char <= 'z') || (char >= 'A' && char <= 'Z')) {
+                isDigitOnly = false;
             }
-            if (checkChan && checkLe) {
+            if (checkKyTu && checkSo) {
                 return -1;
             }
+
         }
-        return checkChan ? 1 : 0;
+        return checkSo ? 1 : 0;
     }
 </script>
 </body>
