--- a/case_study/bai_9.html
+++ b/case_study/bai_9.html
@@ -28,16 +28,17 @@
             }
         }
     }
-    alert("Kết quả: " + checkHam(arr));
+    checkHam(arr);
 
     function checkHam(array) {
         let ketQua = true;
-        for (let i = 0; i < array.length; i += 2) {
-            if (array[i] > array[i + 1]) {
+        for (let i = 0; i < array.length - 1; i += 2) {
+            if (array[i] >= array[i + 1]) {
                 ketQua = false;
+                break;
             }
         }
-        return ketQua ? "Ok" : "No";
+        alert(ketQua ? "OK" : "NO");
     }
 </script>
 </body>
